Give registry key to registered configs
Took 17 minutes